# mini_netcdf

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: mini_netcdf.hpp
include/mini_netcdf/: main.hpp  netcdf_reader.hpp
src/: netcdf_reader.cpp
tests/: netcdf_read_tests.cpp  tests_driver.cpp  util_tests.cpp
